standardise font, fix navbar on mobile

--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -12,13 +12,23 @@
     --secondary: #ff5a48;
     --secondary-light: #fd7061;
     
-    --section-padding: 5rem 12rem;
+    --section-padding: 5rem 10rem;
+    --mobile-padding:  6rem;
+
     --font-body:'Roboto', sans-serif;
     --box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
 
     --margin-small: .5rem;
     --margin-medium: 1rem;
     --margin-large: 2rem;
+
+
+    --fs-vs: 1rem;
+    --fs-sm: 1.4rem;
+    --fs-md: 1.7rem;
+    --fs-lg: 2.5rem;
+
+    --heading-standard: 4rem;
 }
 
 
@@ -56,11 +66,13 @@ body {
 
 .header{
     padding: 0 4rem;
-    position: fixed;
-    top:0;
+    position: absolute;
+    background-color: transparent;
+    z-index: 2;
+    
     width: 100%;
     height: 8rem;
-    background-color: rgba(10, 25, 47, .7);
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -94,7 +106,7 @@ body {
         position:relative;
         margin: 0 auto;
         height: 3rem;
-        width: 3rem;
+        width: 2.8rem;
         padding: 2rem;
     }
 
@@ -125,9 +137,17 @@ body {
         }
     }
 
+    &.active {
+        position: fixed;
+        right: 4rem;
+        z-index: 100;
+       
+    }
+
     &.active .hamburger__line {
         background:rgba(0, 0, 0, 0);
     }
+
 
     &.active .hamburger__line::after {
         top: 0;
@@ -246,23 +266,24 @@ body {
 //landing section ---------------------------------------------------------------------------------
 
 .landing {
+    position: relative;
     background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
-    padding: var(--section-padding);
+    padding: var(--mobile-padding);
     height: 100vh;
     
     &__content{
         position: relative;
         top: 45%;
         transform: translateY(-50%);
-        font-size: 5rem;
-        border: solid 1px red;
+        
+        
     }
 
     &__heading {
         animation: fadeIn .75s;
         opacity: 0;
         animation-fill-mode: both;
-        font-size: 3rem;
+        font-size: 2rem;
         color: var(--white);
         
         &--name {
@@ -270,7 +291,7 @@ body {
             opacity: 0;
             animation-fill-mode: both;
             animation-delay: .5s;
-            font-size: 12rem;
+            font-size: 8rem;
             display: block;
             margin: 0;
             color: var(--text-dark);
@@ -278,7 +299,7 @@ body {
     }
 
     &__subheading {
-        font-size: 3rem;
+        font-size: 4rem;
         color: var(--white);
         margin-bottom: var(--margin-large);
         animation: fadeInRight 1s;
@@ -335,7 +356,7 @@ body {
     background-color: #0C121F;
     color: var(--white);
     font-weight: 300;
-    padding: var(--section-padding);
+    padding: var(--mobile-padding);
 
      &__container {
         display: flex;
@@ -345,24 +366,24 @@ body {
      }
 
      &__heading {
-        font-size: 4rem;
+        font-size: 3rem;
         margin-bottom: 2rem;
         position: relative;
 
          &::after {
              color: var(--white);
              position: absolute;
-             font-size: 3rem;
+             
              content: "";
              width: 5rem;
              border-bottom: 2px solid var(--secondary-light);
-             top: 55px;
+             top: 45px;
              left: 0;
          }
      }
 
      &__paragraph {
-         font-size: 2rem;
+         font-size: var(--fs-md);
          line-height: 1.5;
          margin-bottom: 2rem;
          color: #c9c9c9;
@@ -380,14 +401,15 @@ body {
         background-color: #091b30;
         border-radius: 15px;
         margin: 0 auto;
+        width: 45rem;
         
 
         &__img {
             border-radius: 50%;
             overflow: hidden;
             object-fit: contain;
-            width: 12rem;
-            height: 12rem;
+            width: 11rem;
+            height: 11rem;
             margin-right: 2rem;
             
             
@@ -411,7 +433,7 @@ body {
         }
 
         &__detail {
-            font-size: 1.6rem;
+            font-size: var(--fs-sm);
             margin-bottom: var(--margin-small);
 
             .icon {
@@ -432,7 +454,7 @@ body {
 // section ---------------------------------------------------------------------------------
 
 .projects {
-    padding: var(--section-padding);
+    padding: var(--mobile-padding);
     background-color:var(--background-light);
     width: 100%;
    
@@ -456,7 +478,7 @@ body {
         }
 
         &__text {
-            font-size: 1.6rem;
+            font-size: var(--fs-md);
             line-height: 1.5;
         }
          &__container {
@@ -494,6 +516,7 @@ body {
 
         &__tech {
             margin-bottom: var(--margin-medium);
+            font-size: var(--fs-vs);
 
             .tech {
                 background-color: lightblue;
@@ -513,8 +536,8 @@ body {
             }
 
             p {
-                font-size: 1.25rem;
-                line-height: 1.5;
+                font-size: var(--fs-sm);
+                line-height: 1.3;
                 margin-bottom: var(--margin-medium);
                 color: gray;
                 margin-bottom: 1.5rem;
@@ -522,7 +545,7 @@ body {
         }
 
         &__links {
-            font-size: 1.4rem;
+            font-size: var(--fs-sm);
             
 
             .project-live {
@@ -566,12 +589,10 @@ body {
         }
     }
 
-
-
     // contact section
 
     .contact {
-        padding: var(--section-padding);
+        padding: var(--mobile-padding);
         background:#091b30;
         text-align: center;
         
@@ -594,11 +615,11 @@ body {
 
         &__text {
             @extend .about__paragraph;
-            font-size: 1.5rem;
+            font-size: var(--fs-md);
             
             &--email {
                 @extend .about__paragraph;
-                
+                font-size: var(--fs-md);
                 font-size: 1.5rem;
                 transition: all linear .3s;
                 text-decoration: none;
@@ -707,7 +728,7 @@ body {
         opacity: 0;
         margin-top: .5rem;
         text-align: center;
-        font-size: 1.5rem;
+        font-size: var(--fs-md);
         font-weight: 500;
         transform: translateY(-25px);
         color: var(--white);
@@ -737,7 +758,7 @@ body {
 
             &__copyright {
                 color: white;
-                font-size: 1.5rem;
+                font-size: var(--fs-md);
                 width: 100%;
                 text-align: center;
             }
@@ -773,7 +794,8 @@ body {
     background-color: transparent;
     z-index: 2;
     transition: none;
-    
+    left: 50%;
+    transform: translateX(-50%);
     
     .hamburger{
         display: none;
